# rsgistry

./: .gitignore  .gitmodules  Cargo.toml  README.md  Shuttle.toml
macros/: Cargo.toml
macros/src/: lib.rs
scaffold/: Cargo.toml  Cargo.toml.scaffold  migrations
scaffold/src/: lib.rs
