[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.112"
sqlx = { version = "0.7.2", features = ["postgres"] }
mixin = "0.2.0"
schemars = "0.8.16"
aide = { version = "0.13.3", features = ["axum", "macros"] }
axum = "0.7.4"
